# vcenter-provisioner

./: .env.ci  .env.example  .gitignore  ANALISIS_BD.md  ANALISIS_ESTRUCTURAL.md  ANALISIS_TESTING_ARQUITECTURA.md  CHANGELOG.md  CONTRATO_TECNICO_RUNNER.md  INVARIANTS.md  INVENTARIO_TESTS_COMPLETO.md  LINUX-MIGRATION.md  MAPA_ESTRUCTURAL_PIPELINE.md  PENDIENTES.md  PIPELINE_V2_DISENO.md  PLAN_DE_PRUEBAS.md  PROPUESTA_TESTING_V2.md  QUICKSTART.md  README-FOR-NEXT-AI.md  README.md  REPORTE_ESTRUCTURAL.md  app-vcenter-provisioner.md  ca-coroot-setup.yaml  ci.ps1  coroot-ca.crt  coroot-cr.yaml  coroot-tls.yaml  curl-test.yaml  deploy-simple.ps1  deploy-ui.ps1  deploy.ps1  dev-env-install.ps1  docker-compose.ci.yml  error.md  k8s-migration.md  out.json  pipeline.ps1  pipeline.py  pipeline.sh  pyproject.toml  redeploy-ui-only.ps1  (+20 more)
.opencode/: summary.md
.playwright-cli/: page-2026-05-11T00-57-00-665Z.yml  page-2026-05-11T00-57-16-605Z.yml  page-2026-05-11T01-12-47-083Z.yml  page-2026-05-11T01-12-55-748Z.yml  page-2026-05-11T01-19-06-805Z.yml  page-2026-05-11T01-19-33-010Z.yml  page-2026-05-11T01-19-43-147Z.yml  page-2026-05-11T01-19-53-629Z.yml  page-2026-05-11T01-20-01-834Z.yml  page-2026-05-11T01-20-04-083Z.yml  page-2026-05-11T01-20-08-290Z.yml  page-2026-05-11T01-20-13-799Z.yml  page-2026-05-11T01-20-24-347Z.yml  page-2026-05-11T01-20-35-493Z.yml  page-2026-05-11T01-20-38-563Z.yml  page-2026-05-11T01-20-38-699Z.yml  page-2026-05-11T01-20-40-115Z.yml  page-2026-05-11T01-20-41-787Z.yml  page-2026-05-11T01-20-46-400Z.yml  page-2026-05-11T01-20-47-731Z.yml  (+58 more)
agents/: base.py  (+5 more)
(+518 files in other folders)
